--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homeexpert",
   "version": "1.0.0",
   "description": "Aplicacion de servicios para el hogar",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
