--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^5.0.0"
+    "express": "^5.0.0",
+    "homeexpert": "file:"
   },
   "devDependencies": {
     "husky": "^9.1.5",
